# malachite

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-test.yml  reuse-complience.yml
cmake/: utils.cmake
malachite/: CMakeLists.txt  config.h.in
malachite/client/: main.cc  window.cc  window.hh
malachite/common/: core.hh  log.hh  scope.hh
